# LoadBalancer

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_config  local_debug_settings
Client/: Makefile
Client/main/: Makefile  main.c
Client/src/: main.c  utils.c
Client/utils/: Makefile
Client/utils/include/: messages.h
Client/utils/src/: utils.c
LoadBalancer/: Makefile
LoadBalancer/clientListener/: Makefile
LoadBalancer/clientListener/include/: clientListener.h
LoadBalancer/clientListener/src/: clientListener.c
LoadBalancer/include/: workerListener.h
LoadBalancer/listener/: Makefile
LoadBalancer/listener/include/: listener.h
LoadBalancer/listener/src/: listener.c
LoadBalancer/main/: Makefile  main.c
LoadBalancer/secretary/: Makefile
LoadBalancer/secretary/include/: secretary.h
LoadBalancer/secretary/src/: secretary.c
LoadBalancer/src/: main.c  secretary.c
LoadBalancer/utils/: Makefile
LoadBalancer/utils/include/: heap.h  log.h  messages.h  utils.h
LoadBalancer/utils/src/: heap.c  log.c  utils.c
LoadBalancer/workerListener/: Makefile
LoadBalancer/workerListener/include/: workerListener.h
LoadBalancer/workerListener/src/: workerListener.c
Worker/: Makefile
Worker/main/: Makefile  main.c
Worker/registration/: Makefile
Worker/registration/include/: registration.h
Worker/registration/src/: registration.c
Worker/src/: work.c
Worker/utils/include/: utils.h
Worker/utils/src/: utils.c
Worker/work/: Makefile
Worker/work/include/: work.h
Worker/work/src/: work.c
client/: Makefile
client/include/: utils.h
client/src/: main.c
client/vagrant/: Vagrantfile  lb_address
client/vagrant/ansible/: playbook.yml
common_headers/: messages.h
libs/: CMakeLists.txt
libs/libheap/: CMakeLists.txt
libs/libheap/include/: libheap.h
libs/libheap/src/: libheap.c
libs/liblist/: CMakeLists.txt
libs/liblist/src/: liblist.c
libs/libutils/: CMakeLists.txt
loadBalancer/: Makefile
loadBalancer/include/: messages.h  utils.h
loadBalancer/src/: heap.c  secretary.c  utils.c
loadBalancer/vagrant/: Vagrantfile
load_balancer/: Makefile
load_balancer/src/: secretary.c
load_balancer/vagrant/: Vagrantfile
src/: CMakeLists.txt  Makefile
src/client/: CMakeLists.txt  Makefile
src/client/include/: utils.h
src/client/src/: main.c  utils.c
src/common_headers/: messages.h
src/libs/: Makefile
src/libs/libheap/: Makefile
src/libs/libheap/include/: libheap.h
src/libs/libheap/src/: libheap.c
src/libs/liblist/: Makefile
src/libs/liblist/include/: liblist.h
src/libs/liblist/src/: liblist.c
src/libs/libutils/: Makefile
src/libs/libutils/include/: libutils.h
src/libs/libutils/src/: libutils.c
src/load_balancer/: CMakeLists.txt  Makefile
src/load_balancer/include/: clientListener.h  client_listener.h  connections.h  heap.h  secretary.h  utils.h  workerListener.h  worker_listener.h
src/load_balancer/src/: clientListener.c  client_listener.c  connections.c  heap.c  main.c  secretary.c  utils.c  workerListener.c  worker_listener.c
src/worker/: CMakeLists.txt  Makefile
src/worker/include/: registration.h  utils.h  work.h
src/worker/src/: main.c  registration.c  utils.c  work.c
test_bed/: Vagrantfile  example.settings.yml  settings.yml
test_bed/client/: Dockerfile  client_cron  startup.sh
test_bed/client_fast/: Dockerfile  client  startup.sh
test_bed/load_balancer/: Dockerfile  startup.sh
test_bed/vms/: Vagrantfile  lb_address
test_bed/worker/: Dockerfile  delayed_start.sh  startup.sh
worker/: Makefile
worker/include/: utils.h  work.h
worker/src/: main.c  registration.c  work.c
worker/vagrant/: Vagrantfile
(+49 files in other folders)
